package com.merve.inventory.model.enums;

public enum MovementType {

    PURCHASE,
    SALE

}