@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class Product {
    +id: Long
    +name: String
    +barcode: String
    +price: Double
    +stockQuantity: Integer
}

class Category {
    +id: Long
    +name: String
}

class Supplier {
    +id: Long
    +companyName: String
}

class Warehouse {
    +id: Long
    +name: String
    +location: String
}

class Inventory {
    +id: Long
    +quantity: Integer
}

class StockMovement {
    +id: Long
    +type: String
    +quantity: Integer
    +date: LocalDateTime
}

class PurchaseOrder {
    +id: Long
    +orderDate: LocalDate
}

class SalesOrder {
    +id: Long
    +orderDate: LocalDate
}

class Customer {
    +id: Long
    +fullName: String
}

class Employee {
    +id: Long
    +fullName: String
}

Category "1" <-- "*" Product

Supplier "1" <-- "*" Product

Warehouse "1" <-- "*" Inventory

Product "1" <-- "*" Inventory

Product "1" <-- "*" StockMovement

Warehouse "1" <-- "*" StockMovement

PurchaseOrder "1" <-- "*" StockMovement

SalesOrder "1" <-- "*" StockMovement

Customer "1" <-- "*" SalesOrder

Employee "1" <-- "*" PurchaseOrder

class StockMovement{
-id : Long
-quantity : int
-unitPrice : double
-movementDate : LocalDate
-movementType : MovementType
}

enum MovementType{
PURCHASE
SALE
}

Product "1" <-- "0..*" StockMovement
StockMovement --> MovementType

@enduml